--- a/editorpage.html
+++ b/editorpage.html
@@ -65,6 +65,7 @@
         <ul class="links" id="menuLinks">
           <li><a href="login.html"><h3>Log In</h3><p>로그인 하기</p></a></li>
           <li><a href="signup.html"><h3>Sign Up</h3><p>회원가입 하기</p></a></li>
+          <li><a href="editorpage.html"><h3>Developer Page</h3><p>개발자 페이지</p></a></li>
         </ul>
       </section>
     </section>
@@ -118,12 +119,13 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const links = document.getElementById('menuLinks');
+      // 첫 두 항목은 동적, 세 번째는 항상 표시
       fetch('https://news-assistant-app-public-1052035590147.us-central1.run.app/profile', {
         credentials: 'include'
       }).then(res => {
         links.innerHTML = '';
         if (res.ok) {
-          links.innerHTML = `
+          links.innerHTML += `
             <li><a href="categories.html"><h3>Categories</h3><p>카테고리 수정</p></a></li>
             <li><a href="#" id="logout"><h3>Log Out</h3><p>로그아웃</p></a></li>
           `;
@@ -136,11 +138,15 @@
             window.location.reload();
           });
         } else {
-          links.innerHTML = `
+          links.innerHTML += `
             <li><a href="login.html"><h3>Log In</h3><p>로그인 하기</p></a></li>
             <li><a href="signup.html"><h3>Sign Up</h3><p>회원가입 하기</p></a></li>
           `;
         }
+        // 세 번째: 개발자 페이지 (항상)
+        links.innerHTML += `
+          <li><a href="editorpage.html"><h3>Developer Page</h3><p>개발자 페이지</p></a></li>
+        `;
       });
     });
   </script>
