이미지이쁘게전환

--- a/single.html
+++ b/single.html
@@ -102,7 +102,7 @@
         links.innerHTML = '';
         if (res.ok) {
           links.innerHTML += `
-            <li><a href="categories.html"><h3>Categories</h3><p>카테고리 수정</p></a></li>
+            <li><a href="editinfo.html"><h3>Categories</h3><p>카테고리 수정</p></a></li>
             <li><a href="#" id="logout"><h3>Log Out</h3><p>로그아웃</p></a></li>
           `;
           document.getElementById('logout').addEventListener('click', async e => {
