--- a/index.html
+++ b/index.html
@@ -176,43 +176,19 @@
             `;
             postsList.appendChild(li);
 
-            // 1) 이미지 URL 배열 준비
-            const images = (issue.related_news||[])
-              .map(n => n.image_url)
-              .filter(u => u);
-
-            // 2) 이미지 컨테이너 생성
+            // 이미지 로테이션
+            const images = (issue.related_news || [])
+              .map(n => n.image_url).filter(u => u);
             if (images.length) {
-              // <a class="image"> 내부를 비우고
-              const linkEl = li.querySelector('a.image');
-              linkEl.innerHTML = '';
-
-              // 페이드용 컨테이너
-              const container = document.createElement('div');
-              container.className = 'rotator-container';
-
-              // 이미지 태그들을 모두 생성해서 겹치기
-              images.forEach((url, i) => {
-                const img = document.createElement('img');
-                img.src = url;
-                img.onerror = () => img.src = 'images/noimage.jpg';
-                if (i === 0) img.classList.add('active');
-                container.appendChild(img);
-              });
-
-              // 컨테이너를 링크 안에 넣기
-              linkEl.appendChild(container);
-
-              // 5초마다 active 이미지 순환
               let idx = 0;
+              const imgEl = li.querySelector('img.rotator');
+              imgEl.src = images[0];
+              imgEl.onerror = () => imgEl.src = 'images/noimage.jpg';
               setInterval(() => {
-                const imgs = container.querySelectorAll('img');
-                imgs[idx].classList.remove('active');
-                idx = (idx + 1) % imgs.length;
-                imgs[idx].classList.add('active');
+                idx = (idx + 1) % images.length;
+                imgEl.src = images[idx];
               }, 5000);
             }
-
           });
           offset += limit;
         } catch (e) {
