로그아웃 구현

--- a/index.html
+++ b/index.html
@@ -110,15 +110,25 @@
           // 3) 기존 Categories / Log Out
           links.innerHTML += `
             <li><a href="editinfo.html"><h3>Categories</h3><p>카테고리 수정</p></a></li>
-            <li><a href="#" id="logout"><h3>Log Out</h3><p>로그아웃</p></a></li>
+            <li id="logout"><a href="#"><h3>Log Out</h3><p>로그아웃</p></a></li>
           `;
           document.getElementById('logout').addEventListener('click', async e => {
             e.preventDefault();
-            await fetch('https://news-assistant-app-public-1052035590147.us-central1.run.app/logout', {
-              method: 'POST',
-              credentials: 'include'
-            });
-            window.location.reload();
+            try {
+              const resp = await fetch(
+                'https://news-assistant-app-public-1052035590147.us-central1.run.app/logout',
+                {
+                  method: 'POST',
+                  credentials: 'include'
+                }
+              );
+              if (!resp.ok) throw new Error(resp.statusText);
+              // 로그아웃 성공 시 로그인 페이지로 이동
+              window.location.href = 'login.html';
+            } catch (err) {
+              console.error('로그아웃 실패:', err);
+              alert('로그아웃 중 오류가 발생했습니다.');
+            }
           });
         } else {
           // 비로그인 상태: 로그인/회원가입
@@ -137,7 +147,6 @@
       });
     });
   </script>
-
 
   <!-- 중복검사 · 이미지 로테이션 · 초기 로드 · 무한 스크롤 (원본 index.html) -->
   <script>
